version/0.17/_sources/api/solver/_autosummary/settings/plane_surface.rst.txt
:orphan:

.. _plane_surface:

plane_surface
=============

.. autoclass:: ansys.fluent.core.solver.settings_232.plane_surface.plane_surface
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`plane_surface_child <plane_surface_child>`


.. rubric:: Included in:

============================   =====================

Parent                                       Summary

============================   =====================
:ref:`surfaces <surfaces_3>`       'surfaces' child.

============================   =====================

